# fastapi_auth_service

./: .gitignore  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2025_01_14_0341-3d02d8fdefd6_initial_migration_1.py  2025_01_16_0041-529f7c22ec85_drop_clientuuids_table.py  2025_01_16_2026-8b47391e1eb4_token_len.py  2025_01_21_1039-e9dad838149e_add_bonus_point.py  2025_01_21_1053-a36caa6c0b1e_add_bonus_points.py  2025_01_21_1108-8e03b18453e1_add_address_models.py  2025_01_24_0111-3413a7394e3c_wishlistitem_and_viewedproduct.py  2025_01_24_0113-19201b9327b6_wishlistitem_and_viewedproduct.py
api_v1/: __init__.py  api_dependencies.py
api_v1/address/: views.py
api_v1/auth_phone_sms/: views.py
api_v1/jwt/: views.py
api_v1/oath2_google/: views.py
api_v1/user/: views.py
app_bonus_points/: models.py  schemas.py
app_jwt/: jwt_repository.py  jwt_service.py  models.py  schemas.py  utils.py
app_phone_numbers/: PhoneNumSrtategy.py  models.py  phone_num_repository.py  phone_service.py  schemas.py  smsc_api.py  utils.py
app_sms/: models.py  schemas.py  sms_repository.py  sms_service.py
app_social_account/: models.py  schemas.py  soc_acc_repository.py  soc_acc_service.py
app_users/: models.py  schemas.py  user_service.py  users_repository.py
app_wishlist_Items/: models.py  schemas.py  wishlistitems_repository.py  wishlistitems_service.py
core/: BASE_model.py  BASE_repository.py  BASE_unit_of_work.py  DB_manager.py  __init__.py  settings.py
(+2 files in other folders)
