[tool.poetry]
name = "auth-service-2"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
