[tool.poetry]
name = "auth-service-2"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
pydantic = "^2.10.5"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
tzdata = "^2024.2"
aiosqlite = "^0.20.0"
black = "^24.10.0"
asyncpg = "^0.30.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
